--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ h1 {
   margin-top: 1.5em;
 }
 
-/* input {
+input {
   opacity: 0.7;
   -webkit-appearance: none;
   appearance: none;
@@ -88,9 +88,9 @@ h1 {
   border-radius: 3px;
   -webkit-transition: opacity 0.2s;
   transition: 0.15s ease-in-out;
-} */
+}
 
-/* input::-webkit-slider-thumb {
+input::-webkit-slider-thumb {
   margin-top: -1.2em;
   -webkit-appearance: none;
   appearance: none;
@@ -103,9 +103,9 @@ h1 {
   box-shadow: 2px 5px 15px 5px var(--soft-cyan);
   cursor: pointer;
   z-index: 100;
-} */
+}
 
-/* input::-moz-range-thumb {
+input::-moz-range-thumb {
   width: 25px;
   height: 25px;
   border-radius: 50%;
@@ -122,7 +122,7 @@ input::-webkit-slider-runnable-track {
   background-repeat: no-repeat;
   width: 100%;
   height: 8px;
-} */
+}
 
 .slider {
   position: absolute;
