--- a/src/App.css
+++ b/src/App.css
@@ -77,12 +77,13 @@ h1 {
   margin-top: 1.5em;
 }
 
-input {
+input[type="range"] {
   opacity: 0.7;
   -webkit-appearance: none;
   appearance: none;
   width: 100%;
   height: 8px;
+  cursor: pointer;
   background: var(--strong-cyan);
   outline: none;
   border-radius: 3px;
@@ -90,8 +91,7 @@ input {
   transition: 0.15s ease-in-out;
 }
 
-input::-webkit-slider-thumb {
-  margin-top: -1.2em;
+input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 40px;
@@ -102,19 +102,10 @@ input::-webkit-slider-thumb {
   background-position: center;
   box-shadow: 2px 5px 15px 5px var(--soft-cyan);
   cursor: pointer;
-  z-index: 100;
+  transition: background 0.3s ease-in-out;
 }
 
-input::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: var(--strong-cyan);
-  box-shadow: 2px 5px 15px 5px var(--soft-cyan);
-  cursor: pointer;
-}
-
-input::-webkit-slider-runnable-track {
+/* input[type="range"]::-webkit-slider-runnable-track {
   background: var(--light-grayish-blue);
   border-radius: 3px;
   background-image: linear-gradient(var(--soft-cyan), var(--white));
@@ -122,6 +113,17 @@ input::-webkit-slider-runnable-track {
   background-repeat: no-repeat;
   width: 100%;
   height: 8px;
+} */
+
+input[type="range"]::-webkit-slider-thumb:hover {
+  box-shadow: var(--light-blue) 0px 0px 0px 8px;
+}
+
+input[type="range"]::-webkit-slider-thumb:active {
+  box-shadow: var(--light-blue) 0px 0px 0px 11px;
+  transition: box-shadow 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    left 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    bottom 350ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
 .slider {
@@ -189,8 +191,8 @@ input::-webkit-slider-runnable-track {
   background-color: var(--strong-cyan);
 }
 
-.switch-toggle.active { 
-  justify-content: flex-end; 
+.switch-toggle.active {
+  justify-content: flex-end;
 }
 
 .switch-circle {
@@ -237,19 +239,14 @@ input::-webkit-slider-runnable-track {
   border-radius: 5em;
 }
 
-li {
-  list-style-image: url(./images/icon-check.svg);
-  text-align: left;
-}
-
-.slider-details {
+.slider-features {
   position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.slider-details::before {
+.slider-features::before {
   position: absolute;
   content: "";
   top: -15px;
@@ -260,7 +257,7 @@ li {
   background-color: var(--light-grayish-blue);
 }
 
-.slider-details button {
+.slider-features button {
   background-color: var(--dark-desaturated-blue);
   border: none;
   border-radius: 5em;
@@ -278,10 +275,16 @@ li {
   transition: color 175ms ease-in-out;
 }
 
-.slider-details button:hover,
-.slider-details button:focus,
-.slider-details button:active {
+.slider-features button:hover,
+.slider-features button:focus,
+.slider-features button:active {
   color: var(--light-grayish-red);
+}
+
+.slider-features .features-list .list-item {
+  list-style-image: url(./images/icon-check.svg);
+  text-align: left;
+  list-style-position: inside;
 }
 
 @media (max-width: 767px) {
