--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,8 @@ body {
   background-color: var(--very-pale-blue);
   background-repeat: no-repeat;
   background-position: top;
+  /* background-size: contain; */
+  background-size: 100% auto;
 }
 
 .container {
@@ -54,31 +56,26 @@ header::before {
   content: url("./images/pattern-circles.svg");
 }
 
-h1 {
-  font-size: 40px;
+header h1 {
+  font-size: 35px;
   font-weight: 800;
   color: var(--dark-desaturated-blue);
   margin-bottom: 15px;
 }
 
 .slider-views {
-  display: flex;
+  display: grid;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  gap: 30px;
 }
 
-#views {
+.slider-views .views-container {
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 2px;
-}
-
-#slider {
-  width: 100%;
-}
-
-.slider-rule {
-  margin-top: 1.5em;
+  grid-row: 1/2;
 }
 
 input[type="range"] {
@@ -93,6 +90,7 @@ input[type="range"] {
   border-radius: 3px;
   -webkit-transition: opacity 0.2s;
   transition: 0.15s ease-in-out;
+  grid-column: 1/3;
 }
 
 input[type="range"]::-webkit-slider-thumb {
@@ -133,15 +131,15 @@ input[type="range"]::-webkit-slider-thumb {
   margin: 40px 0;
 }
 
-.switch {
-  font-size: 17px;
+.slider-switch .switch-item {
+  font-size: 15px;
   position: relative;
   display: inline-block;
   width: 3.5em;
   height: 1.8em;
 }
 
-.switch input {
+.slider-switch .switch-item input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -199,6 +197,7 @@ input:checked + .slider:before {
   font-weight: 800;
   align-items: center;
   display: flex;
+  grid-row: 1/2;
 }
 
 .views-price .price-detail {
@@ -283,7 +282,8 @@ br {
   }
   
   body {
-    font-size: 14px;
+    font-size: 13px;
+    background-size: initial;
   }
 
   .desktop-discount {
@@ -295,16 +295,19 @@ br {
   }
 
   header {
-    margin-top: 50px;
+    margin: 80px 0 70px 0;
   }
 
   br {
     display: block;
   }
 
-  h1 {
+  header h1 {
     font-size: 22px;
-    margin-bottom: 15px;
+  }
+
+  .slider-container {
+    padding: 20px 15px;
   }
 
   .slider:before {
@@ -314,15 +317,14 @@ br {
 
   .slider-views {
     display: flex;
-    flex-direction: column;
   }
 
   .slider-switch p {
-    font-size: 13px;
+    font-size: 12px;
     margin: 0 7px;
   }
 
-  .switch {
+  .switch-item {
     font-size: 15px;
   }
 
