--- a/src/App.css
+++ b/src/App.css
@@ -36,13 +36,10 @@ body {
   background-color: var(--very-pale-blue);
   background-repeat: no-repeat;
   background-position: top;
-  /* background-size: contain; */
-  background-size: 100% auto;
+  background-size: 100% auto
 }
 
-.container {
-  max-width: 1440px;
-}
+/* ----------HEADER---------- */
 
 header {
   position: relative;
@@ -63,6 +60,8 @@ header h1 {
   margin-bottom: 15px;
 }
 
+/* ----------RANGE---------- */
+
 .slider-views {
   display: grid;
   flex-direction: column;
@@ -78,7 +77,7 @@ header h1 {
   grid-row: 1/2;
 }
 
-input[type="range"] {
+.slider-views .views-range {
   opacity: 0.7;
   -webkit-appearance: none;
   appearance: none;
@@ -93,7 +92,7 @@ input[type="range"] {
   grid-column: 1/3;
 }
 
-input[type="range"]::-webkit-slider-thumb {
+.slider-views .views-range::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 40px;
@@ -116,14 +115,6 @@ input[type="range"]::-webkit-slider-thumb {
     rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 }
 
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
 .slider-switch {
   display: flex;
   justify-content: center;
@@ -131,7 +122,7 @@ input[type="range"]::-webkit-slider-thumb {
   margin: 40px 0;
 }
 
-.slider-switch .switch-item {
+.slider-switch .switch-input {
   font-size: 15px;
   position: relative;
   display: inline-block;
@@ -139,13 +130,13 @@ input[type="range"]::-webkit-slider-thumb {
   height: 1.8em;
 }
 
-.slider-switch .switch-item input {
+.slider-switch .switch-input input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-.slider {
+.slider-switch .switch-item {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -158,7 +149,7 @@ input[type="range"]::-webkit-slider-thumb {
   border-radius: 30px;
 }
 
-.slider:before {
+.switch-item:before {
   position: absolute;
   content: "";
   height: 1.2em;
@@ -170,12 +161,12 @@ input[type="range"]::-webkit-slider-thumb {
   transition: 0.4s;
 }
 
-input:checked + .slider {
+input:checked + .switch-item {
   background-color: var(--strong-cyan);
   border: 1px solid var(--strong-cyan);
 }
 
-input:checked + .slider:before {
+input:checked + .switch-item:before {
   transform: translateX(1.4em);
 }
 
@@ -223,6 +214,8 @@ input:checked + .slider:before {
   padding: 0.3em 0.5em;
   border-radius: 5em;
 }
+
+/* ----------FEATURES---------- */
 
 .slider-features {
   position: relative;
@@ -276,14 +269,14 @@ br {
   display: none;
 }
 
-@media (max-width: 375px) {
-  .container {
-    margin: 0 20px;
-  }
+/* ----------MEDIA QUERY - MOBILE VIEW---------- */
+
+@media (max-width: 600px) {
   
   body {
     font-size: 13px;
     background-size: initial;
+    margin: 0 20px;
   }
 
   .desktop-discount {
@@ -310,7 +303,7 @@ br {
     padding: 20px 15px;
   }
 
-  .slider:before {
+  .switch-item:before {
     height: 1em;
     width: 1em;
   }
@@ -319,12 +312,16 @@ br {
     display: flex;
   }
 
+  .slider-switch { 
+    margin: 20px 0;
+  }
+
   .slider-switch p {
     font-size: 12px;
     margin: 0 7px;
   }
 
-  .switch-item {
+  .switch-input {
     font-size: 15px;
   }
 
